# Raytracer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md  could_feature.md  documentation_request.md  feature_request.md  must_feature.md  should_feature.md
doc/: COMMIT.md  example_config.cfg
include/: Color.hpp  Config.hpp  Factory.hpp  Object.hpp  Output.hpp  Raytracer.hpp  Utils.hpp  hitInfo.hpp
math/include/: Material.hpp  Point.hpp  Shapes.hpp
math/src/: Material.cpp  Point.cpp  Shapes.cpp
src/: Color.cpp  Config.cpp  Factory.cpp  Object.cpp  Output.cpp  Raytracer.cpp  Utils.cpp
